<resources>
    <string name="app_name">Adventure Guide</string>
    <string name="hello_world">Hello, World!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="adventure_guide_register_account">Register New Account</string>
    <string name="adventure_guide_field_enter_name">Username</string>
    <string name="adventure_guide_field_enter_pw">Password</string>
    <string name="adventure_guide_register_user">Create New User</string>
    <string name="adventure_guide_new_account">Create New Account</string>\
    <string name="adventure_guide_login">Login</string>
    <string name="adventure_guide_title">Adventure Guide</string>
    <string name="title_activity_create_new_account">CreateNewAccount</string>
    <string name="adventure_guide_txt_account_management">Account Management</string>
    <string name="adventure_guide_flush_credentials">Logout</string>
    <string name="adventure_guide_login_title">Account Login</string>
    <string name="adventure_guide_login_user">User</string>
    <string name="adventure_guide_mylist_title">Major Attractions</string>
    <string name="title_activity_view_major_attractions">ViewMajorAttractions</string>
    <string name="adventure_guide_view_major_attractions">View Major Attractions</string>
    <string name="adventure_guide_application_activities">Application Activities</string>
    <string name="adventure_guide_name_label">Name</string>
    <string name="adventure_guide_desc_label">Description</string>
    <string name="major_attraction_image_description">Major Attraction Image</string>
    <string name="adventure_guide_item_name_field">adventure_guide_item_name_field</string>
    <string name="adventure_guide_desc_field">adventure_guide_desc_field</string>
    <string name="adventure_guide_detail_name">adventure_guide_detail_name</string>
    <string name="adventure_guide_detail_desc">adventure_guide_detail_desc</string>
    <string name="adventure_guide_current_credentials">User Credentials</string>
    <string name="adventure_guide_cur_username_label">Username</string>
    <string name="adventure_guide_view_credentials">View Credentials</string>
    <string name="adventure_guide_review_label">Reviews</string>
    <string name="adventure_guide_read_reviews">Read Reviews</string>
    <string name="adventure_guide_write_review">Write Review</string>
    <string name="adventure_guide_minor_attractions">Minor Attractions</string>
    <string name="adventure_guide_view_minor_attractions">View Minor Attractions</string>
    <string name="last_name_hint">Last Name</string>
    <string name="first_name_hint">First Name</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="email_address_hint">Email Address</string>
    <string name="hidden_value">Hidden Value</string>
    <string name="adventure_guide_cur_id_label">ID</string>
    <string name="adventure_guide_item_user_field">Username</string>
    <string name="adventure_guide_user_label">Username</string>
    <string name="adventure_guide_body_label">Body</string>
    <string name="adventure_guide_body_field">Body</string>
    <string name="adventure_guide_reviewlist_title">Attraction Reviews</string>
    <string name="adventure_guide_edit_review">Edit</string>
    <string name="adventure_guide_delete_review">Delete</string>
    <string name="adventure_guide_attraction_name">Attraction Name</string>
    <string name="adventure_guide_submit">Submit</string>
</resources>
