<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.herokuapp.secret_bastion_27250.adventureguide.CreateNewAccount">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/adventure_guide_register_account"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adventure_guide_field_username"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="52dp"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:hint="@string/username_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/adventure_guide_field_pw"
        android:layout_below="@+id/adventure_guide_field_username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/adventure_guide_field_username"
        android:layout_alignEnd="@+id/adventure_guide_field_username"
        android:hint="@string/password_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adventure_guide_field_fname"
        android:layout_below="@+id/adventure_guide_field_pw"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/adventure_guide_field_pw"
        android:layout_alignEnd="@+id/adventure_guide_field_pw"
        android:hint="@string/first_name_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adventure_guide_field_lname"
        android:layout_below="@+id/adventure_guide_field_fname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/adventure_guide_field_fname"
        android:layout_alignEnd="@+id/adventure_guide_field_fname"
        android:hint="@string/last_name_hint" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adventure_guide_field_email"
        android:layout_below="@+id/adventure_guide_field_lname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/adventure_guide_field_lname"
        android:layout_alignEnd="@+id/adventure_guide_field_lname"
        android:hint="@string/email_address_hint"
        android:inputType="textEmailAddress" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adventure_guide_register_user"
        android:id="@+id/adventure_guide_button_user_register"
        android:layout_below="@+id/adventure_guide_field_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>