<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.herokuapp.secret_bastion_27250.adventureguide.ViewMajorAttraction"
        android:id="@+id/viewToDo">

        <ImageView android:id="@+id/imageView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/major_attraction_image_description">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/adventure_guide_name_label"
            android:id="@+id/textView6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView2"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="#ff2b2b2b" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/adventure_guide_item_name_field"
            android:id="@+id/adventure_guide_detail_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView6"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="#ff515151" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/adventure_guide_desc_label"
            android:id="@+id/textview7"
            android:layout_below="@+id/adventure_guide_detail_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="#ff2b2b2b" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/adventure_guide_desc_field"
            android:id="@+id/adventure_guide_detail_desc"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textview7"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="#ff515151"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"/>

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
            <!--android:text="@string/adventure_guide_minor_attractions"-->
            <!--android:id="@+id/textView8"-->
            <!--android:layout_below="@+id/adventure_guide_detail_desc"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true" />-->

        <!--<Button-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/adventure_guide_view_minor_attractions"-->
            <!--android:id="@+id/button7"-->
            <!--android:onClick="viewMinorAttractions"-->
            <!--android:layout_below="@+id/textView8"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:background="#50c0e9"-->
            <!--android:layout_margin="8dp"/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/adventure_guide_review_label"
            android:id="@+id/textView9"
            android:layout_below="@+id/adventure_guide_detail_desc"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adventure_guide_read_reviews"
            android:id="@+id/button8"
            android:onClick="readReviews"
            android:layout_below="@+id/textView9"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="#a84fff59"
            android:layout_margin="8dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adventure_guide_write_review"
            android:id="@+id/button9"
            android:onClick="writeReview"
            android:layout_below="@+id/button8"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="#92ff3630"
            android:layout_margin="8dp"
            android:visibility="gone"/>
    </RelativeLayout>
</ScrollView>